--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css"
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
   </head>
 
   <body>
-    <div class="homepage">
+    <div id="homepage">
       <div>
         <img id="cible" src="Assets/cibler.png" />
       </div>
@@ -46,6 +47,7 @@
         <section>
           <b>Guiding you </b>through <br />legal complexities <br />
           with<span> experience and <br />compassion</span>
+
           <p>
             We are committed to providing compassionate and effective legal<br />
             representation to our clients.
@@ -142,7 +144,7 @@
 
       <section class="about">
         <div id="company">
-          <img src="Assets/img2.jpg" />
+          <img id="about" src="Assets/img2.jpg" />
           <h4>About <br /><b>the Company</b></h4>
         </div>
         <div class="container">
@@ -204,7 +206,7 @@
       </section>
 
       <section class="posts">
-        <article>
+        <article class="vignets">
           <img src="Assets/img4.jpg" />
           <div>
             <h5>
@@ -222,7 +224,7 @@
           </div>
         </article>
 
-        <article>
+        <article class="vignets">
           <img src="Assets/img3.jpg" />
           <div>
             <h5>
@@ -238,7 +240,7 @@
           </div>
         </article>
 
-        <article>
+        <article class="vignets">
           <img src="Assets/img5.jpg" />
           <div>
             <h5>
